website/versioned_docs/version-2.7.x/docs/python/overview/building-distributions.mdx
---
    title: Building distributions
    position: 7
---

Running setup.py commands to create an sdist or a wheel.

---

The standard Python packaging mechanism, [setuptools](https://setuptools.readthedocs.io/), expects a build script called `setup.py` that describes how to package your project into a _distribution_: an archive that is uploaded to a package index such as [PyPI](https://pypi.org/), and can be installed by [pip](https://packaging.python.org/key_projects/#pip). 

Common distribution formats include [sdist](https://packaging.python.org/glossary/#term-source-distribution-or-sdist), a source distribution format, and [wheel](https://packaging.python.org/glossary/#wheel), a built distribution format.

Pants knows how to build distributions that you can then publish to PyPI or a private package index.  It can use an existing `setup.py` file, or can generate one for you.

A distribution is set up using a [`python_distribution`](doc:reference-python_distribution) target. This target provides Pants with the information needed to build the distribution, such as the setuptools commands to run.

See [here](https://packaging.python.org/tutorials/packaging-projects/) for more information about the `setup.py` file and the commands you can run with it.
[block:callout]
{
  "type": "success",
  "title": "Benefit of Pants: multiple distributions in the same repository",
  "body": "Typically, repositories without sophisticated tooling end up with a single `setup.py`, which includes the entire repo in the distribution.\n\nPants makes it easy to create multiple related distributions from the same repository. Because Pants understands your code's true dependencies, each distribution will only be built with the exact code and metadata that it needs to work."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "See `package` for other package formats",
  "body": "This page focuses on building sdists and wheels with the `./pants package` goal. See [package](doc:python-package-goal) for information on other formats that work with `./pants package`, such as PEX binaries and zip/tar archives."
}
[/block]

[block:api-header]
{
  "title": "Using an existing `setup.py`"
}
[/block]
As mentioned, the core instructions for building a distribution goes in a file called `setup.py`.  If you have an existing `setup.py` file, Pants can use it seamlessly.  This is particularly useful if your distribution includes [native extensions](https://docs.python.org/3/extending/extending.html) in C/C++.

In this case, the target will look like this:
[block:code]
{
  "codes": [
    {
      "code": "python_distribution(\n    name=\"mydist\",\n    dependencies=[\n        # Explicit dependencies on the code and resources that setup.py needs.\n        # Including any .c files that are compiled into native extensions.\n        # E.g., https://github.com/pantsbuild/pants/tree/main/testprojects/src/python/native\n    ],\n    provides=python_artifact(\n        name=\"mydist\",\n        version=\"2.21.0\",\n        setup_script=\"setup.py\",  # Relative path from this BUILD file.\n    )\n    setup_py_commands=[\"sdist\", \"bdist_wheel\", \"--python-tag\", \"py36.py37\"]\n)",
      "language": "python",
      "name": "BUILD"
    }
  ]
}
[/block]
Running `./pants package path/to:mydist` will run setuptools and place the resulting distribution artifacts into the `dist/` directory.
[block:api-header]
{
  "title": "Using a generated `setup.py`"
}
[/block]
If your distribution is pure Python, much of the data you would normally put in a `setup.py` file is already known to Pants, so it can be convenient to let Pants generate `setup.py` files for you, instead of maintaining them manually for each distributable project. 

In this case, the `python_distribution` target will look like this:
[block:code]
{
  "codes": [
    {
      "code": "python_distribution(\n    name=\"mydist\",\n    dependencies=[\n        ...\n    ],\n    provides=python_artifact(\n        name=\"mydist\",\n        version=\"2.21.0\",\n        description=\"An example distribution built with Pants.\",\n        author=\"Pantsbuild\",\n        classifiers=[\n            \"Programming Language :: Python :: 3.7\",\n        ],\n    ),\n    setup_py_commands=[\"sdist\", \"bdist_wheel\", \"--python-tag\", \"py36.py37\"]\n)\n",
      "language": "python",
      "name": "BUILD"
    }
  ]
}
[/block]
Some important `setup.py` metadata is inferred by Pants from your code and its dependencies. Other metadata needs to be provided explicitly.  In Pants, as shown above, you do so through the `provides` field. 

You can use almost any [keyword argument](https://packaging.python.org/guides/distributing-packages-using-setuptools/#setup-args) accepted by `setup.py` in the `setup()` function. 

However, you cannot use `data_files`, `install_requires`, `namespace_packages`, `package_dir`, `package_data`, or `packages` because Pants will generate these for you, based on the data derived from your code and dependencies.
[block:callout]
{
  "type": "info",
  "title": "Use the `entry_points` field to register entry points like `console_scripts`",
  "body": "The [`entry_points` field](doc:reference-python-distributions#codeentry_pointscode) allows you to configure [setuptools-style entry points](https://packaging.python.org/specifications/entry-points/#entry-points-specification):\n\n```python\npython_distribution(\n   name=\"my-dist\",\n   entry_points={\n       \"console_scripts\": {\"some-command\": \"project.app:main\"},\n       \"flake8_entry_point\": {\n           \"PB1\": \"my_flake8_plugin:Plugin\",\n           \"PB2\": \"my_flake8_plugin:AnotherPlugin\",\n       },\n   provides=python_artifact(...),\n)\n```\n\nPants will infer dependencies on each entry point, which you can confirm by running `./pants dependencies path/to:python_dist`.\n\nIn addition to using the format `path.to.module:func`, you can use an [address](doc:targets) to a `pex_binary` target, like `src/py/project:pex_binary` or `:sibling_pex_binary`. Pants will use the `entry_point` already specified by the `pex_binary`, and it will infer a dependency on the `pex_binary` target. This allows you to better DRY your project's entry points."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Consider writing a plugin to dynamically generate the `setup()` keyword arguments",
  "body": "You may want to write a plugin to do any of these things:\n\n* Reduce boilerplate by hardcoding common arguments and commands.\n* Read from the file system to dynamically determine kwargs, such as the `long_description` or `version`.\n* Run processes like Git to dynamically determine the `version` kwarg.\n\nStart by reading about the [Plugin API](doc:plugins-overview), then refer to the [Custom `python_artifact()` kwargs](doc:plugins-setup-py) instructions."
}
[/block]

[block:api-header]
{
  "title": "Mapping libraries to distributions"
}
[/block]
A Pants repo typically consists of many `python_library` targets in BUILD files spread across the codebase.  To build distributions, Pants must determine which libraries are bundled into each distribution. 

In the extreme case, you could have one distribution per library. But `python_library` targets tend to be fine-grained, representing perhaps a single Python package, whereas distributions are coarser grained, representing a larger project or piece of functionality. A codebase might have hundreds or thousands of `python_library` targets, but publishing and consuming that many distributions isn't practical.

So in practice, multiple libraries are typically bundled into a single distribution. Naively, you might think that a `python_distribution` publishes all the code of all the `python_library` targets it transitively depends on. But that could easily lead to trouble if you have multiple distributions that share common dependencies. You typically don't want the same code published in multiple distributions, as this can lead to all sorts of runtime import issues. 

If you use a handwritten `setup.py`, you have to figure this out for yourself - Pants will bundle whatever the script tells it to.  But if you let Pants generate `setup.py` then it will apply the following algorithm:

Given a `python_distribution` target D, take all the libraries in the transitive dependency closure of D. Some of those libraries may be published in D itself, but others may be published in some other `python_distribution` target, D', in which case Pants will correctly add a requirement on D' in the metadata for D.
 
For each `python_library` target L, the distribution in which L's code is published is chosen to be:

1. A `python_distribution` that depends, directly or indirectly, on L.
2. Is L's closest filesystem ancestor among those satisfying 1.

If there are multiple such exported libraries at the same degree of ancestry, the ownership
is ambiguous and an error is raised. If there is no `python_distribution` that depends on L
and is its ancestor, then there is no owner and an error is raised.

This algorithm implies that all libraries published by a distribution must be below it in the filesystem. It also guarantees that a library is only published by a single distribution.
[block:callout]
{
  "type": "info",
  "title": "Changing the versioning scheme for first-party dependencies",
  "body": "When a `python_distribution` depends on another `python_distribution`, Pants will add it to the `install_requires` value in the generated `setup.py`. \n\nBy default, Pants will use exact requirements for first-party dependencies, like `other_dist==1.0.1`. You can set `first_party_depenency_version_scheme` in the `[setup-py-generation]` scope to `'compatible'` to use `~=` instead of `==`, and `any` to leave off the version.\n\nFor example:\n\n```toml\n[setup-py-generation]\nfirst_party_depenency_version_scheme = \"compatible\"\n```\n\nSee https://www.python.org/dev/peps/pep-0440/#version-specifiers for more information on the `~=` specifier."
}
[/block]

[block:api-header]
{
  "title": "Viewing the generated `setup.py` file"
}
[/block]
If your `python_distribution` target has no `setup_py_commands`, then running `./pants package` on that target will just create a directory with all of your distribution's code and - if relevant - the generated `setup.py` file. 

The generated `setup.py` will have its `install_requires` set to include the 3rdparty dependencies of the code bundled in the distribution, and any other distributions from your own repo. For example, if distribution D1 contains code that has a dependency on some library L, and that library is published in distribution D2, then D1's requirements will include a dependency on D2.  In other words, Pants does the right thing...

[block:api-header]
{
  "title": "Running setup.py commands"
}
[/block]
If your `python_distribution` target has `setup_py_commands`, then running `./pants package` on that target will run those commands for you. 

For example, if `setup_py_commands=["bdist_wheel", "sdist"]`, then `./pants package` will build both a wheel and sdist for the given target.
[block:callout]
{
  "type": "info",
  "title": "How to upload your distributions to a package index",
  "body": "Pants does not have a mechanism to upload your distributions. Instead, run `package` as described above to create the asset, such as a `.whl` file, then use a tool like Twine to upload your package.\n\nPlease let us know on [Slack](doc:community) or [GitHub issues](https://github.com/pantsbuild/pants/issues/new) if you would like this feature."
}
[/block]